<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person_gray_24dp" />

                <!--                <com.google.android.material.textfield.TextInputLayout-->
                <!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginLeft="16dp">-->

                <!--                    <com.google.android.material.textfield.TextInputEditText-->
                <!--                        android:id="@+id/text_input_subject"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:hint="@string/subject_name"-->
                <!--                        android:inputType="text"-->
                <!--                        android:maxLines="1"-->
                <!--                        android:singleLine="true" />-->
                <!--                    -->
                <!--                </com.google.android.material.textfield.TextInputLayout>-->

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_question_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/spinner_array" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_vpn_key_gray_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_name"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_phone_gray_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_standardanswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/standardanswer_name"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_question_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:text="@string/question_input_text"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>